--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_DEV=http://localhost:3002
+REACT_APP_SERVER_DEV=http://localhost:3002/
 REACT_APP_SERVER_PROD=https://portfolio-backend-rclx.onrender.com/
