--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_SERVER_DEV=http://localhost:3002
-REACT_APP_SERVER_PROD=https://portfolio-backend-fplj.vercel.app/
-REACT_APP_API_BASE_URL=https://portfolio-backend-fplj.vercel.app/
+REACT_APP_SERVER_PROD=http://localhost:3002
+# REACT_APP_SERVER_PROD=https://portfolio-backend-fplj.vercel.app
+REACT_APP_API_BASE_URL=https://portfolio-backend-fplj.vercel.app
